--- a/partials/payment.hbs
+++ b/partials/payment.hbs
@@ -72,7 +72,7 @@
                                         <div class="">
                                             <p class="bank_transfer__label is-size-6 has-text-grey">Nội dung chuyển khoản <i class="fas fa-exclamation-circle has-text-primary"></i></p>
                                             <p class="bank_transfer__value is-size-5 has-text-weight-bold" id="transfer_description">
-                                                [Số điện thoại của bạn] finpub -{{title}}-
+                                                <span id="transfer_prefix">[Số điện thoại của bạn] finpub</span>-<span>{{fp_post_code}}</span>-
                                             </p>
                                         </div>
                                     </div>
@@ -125,7 +125,7 @@
                                                 <div class="">
                                                     <p class="bank_transfer__label is-size-6 has-text-grey">Nội dung chuyển khoản <i class="fas fa-exclamation-circle has-text-primary"></i></p>
                                                     <p class="bank_transfer__value is-size-5 has-text-weight-bold">
-                                                        finpub -{{title}}-
+                                                        finpub -{{fp_post_code}}-
                                                     </p>
                                                 </div>
                                             </div>
