--- a/partials/payment.hbs
+++ b/partials/payment.hbs
@@ -72,12 +72,12 @@
                                         <div class="">
                                             <p class="bank_transfer__label is-size-6 has-text-grey">Nội dung chuyển khoản <i class="fas fa-exclamation-circle has-text-primary"></i></p>
                                             <p class="bank_transfer__value is-size-5 has-text-weight-bold" id="transfer_description">
-                                                <span id="transfer_prefix">[Số điện thoại của bạn] finpub</span>-<span>{{fp_post_code}}</span>-
+                                                <span id="transfer_prefix">finpub</span><span>{{fp_post_code}}</span>
                                             </p>
                                         </div>
                                     </div>
                                     <div class="level-right">
-                                        <a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy"  onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a>
+                                        <a class="btn icon is-medium has-text-grey-light tt-copy-btn" title="copy" data-clipboard-target="#transfer_description"><i class="fas fa-copy tt-clickable"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -125,12 +125,12 @@
                                                 <div class="">
                                                     <p class="bank_transfer__label is-size-6 has-text-grey">Nội dung chuyển khoản <i class="fas fa-exclamation-circle has-text-primary"></i></p>
                                                     <p class="bank_transfer__value is-size-5 has-text-weight-bold">
-                                                        finpub -{{fp_post_code}}-
+                                                        finpub {{fp_post_code}}
                                                     </p>
                                                 </div>
                                             </div>
                                             <div class="level-right">
-                                                <a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy"  onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a>
+                                                <a class="btn icon is-medium has-text-grey-light tt-copy-btn" title="copy" data-clipboard-text="finpub {{fp_post_code}}"><i class="fas fa-copy tt-clickable"></i></a>
                                             </div>
                                         </div>
                                     </div>
