Nicer copy alert

--- a/default.hbs
+++ b/default.hbs
@@ -162,7 +162,7 @@
 
 			var clipboard = new ClipboardJS('.btn'); // initialize clipboard
 			clipboard.on('success', function(e) {
-				alert("Copied");
+				alert("Thông tin đã được copy");
     			e.clearSelection();
 			});
 
