--- a/partials/payment.hbs
+++ b/partials/payment.hbs
@@ -33,22 +33,22 @@
                                     <div class="level-left">
                                         <div class="">
                                             <p class="bank_transfer__label is-size-5 has-text-grey">Số tài khoản</p>
-                                            <p class="bank_transfer__value is-size-4">0123557686896</p>
+                                            <p class="bank_transfer__value is-size-4" id="bank_account">0123557686896</p>
                                         </div>
                                     </div>
                                     <div class="level-right">
-                                        <a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy" onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a>
+                                        <a class="icon is-medium has-text-grey-light tt-copy-btn btn" title="copy" data-clipboard-target="#bank_account"><i class="fas fa-copy tt-clickable"></i></a>
                                     </div>
                                 </div>
                                 <div class="level">
                                     <div class="level-left">
                                         <div class="">
                                             <p class="bank_transfer__label is-size-5 has-text-grey">Tên chủ tài khoản</p>
-                                            <p class="bank_transfer__value is-size-4">Phạm Hà My</p>
+                                            <p class="bank_transfer__value is-size-4" id="bank_owner_name">Phạm Hà My</p>
                                         </div>
                                     </div>
                                     <div class="level-right">
-                                        <a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy"  onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a>
+                                        <a class="icon is-medium has-text-grey-light tt-copy-btn btn" title="copy" data-clipboard-target="#bank_owner_name"><i class="fas fa-copy tt-clickable"></i></a>
                                     </div>
                                 </div>
                                 <div class="level">
@@ -104,11 +104,11 @@
                                             <div class="level-left">
                                                 <div class="">
                                                     <p class="bank_transfer__label is-size-5 has-text-grey">Số điện thoại</p>
-                                                    <p class="bank_transfer__value is-size-4">0394919200</p>
+                                                    <p class="bank_transfer__value is-size-4" id="momo_owner_phone">0394919200</p>
                                                 </div>
                                             </div>
                                             <div class="level-right">
-                                                <a class="icon is-medium has-text-grey-light tt-copy-btn" title="copy"  onclick="return copyText(event)"><i class="fas fa-copy tt-clickable"></i></a>
+                                                <a class="icon is-medium has-text-grey-light tt-copy-btn btn" title="copy" data-clipboard-target="#momo_owner_phone"><i class="fas fa-copy tt-clickable"></i></a>
                                             </div>
                                         </div>
                                         <div class="level">
