--- a/partials/payment.hbs
+++ b/partials/payment.hbs
@@ -63,7 +63,7 @@
                                     <div class="level-left">
                                         <div class="">
                                             <p class="bank_transfer__label is-size-5 has-text-grey-light">Số tiền</p>
-                                            <p class="bank_transfer__value is-size-4">{{fee}}</p>
+                                            <p class="bank_transfer__value is-size-4">{{fee}},000</p>
                                         </div>
                                     </div>
                                 </div>
@@ -71,8 +71,8 @@
                                     <div class="level-left">
                                         <div class="">
                                             <p class="bank_transfer__label is-size-5 has-text-grey">Nội dung chuyển khoản <i class="fas fa-exclamation-circle has-text-primary"></i></p>
-                                            <p class="bank_transfer__value is-size-4 has-text-weight-bold" id="transfer_description">
-                                                <span id="transfer_prefix">finpub</span><span>{{fp_post_code}}</span>
+                                            <p class="bank_transfer__value is-size-4 has-text-weight-bold is-uppercase" id="transfer_description">
+                                                <span>FP {{fp_post_code}} </span><span id="transfer_prefix"></span>
                                             </p>
                                         </div>
                                     </div>
@@ -115,7 +115,7 @@
                                             <div class="level-left">
                                                 <div class="">
                                                     <p class="bank_transfer__label is-size-5 has-text-grey-light">Số tiền</p>
-                                                    <p class="bank_transfer__value is-size-4">{{fee}}</p>
+                                                    <p class="bank_transfer__value is-size-4">{{fee}},000</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -124,8 +124,8 @@
                                             <div class="level-left">
                                                 <div class="">
                                                     <p class="bank_transfer__label is-size-5 has-text-grey">Nội dung chuyển khoản <i class="fas fa-exclamation-circle has-text-primary"></i></p>
-                                                    <p class="bank_transfer__value is-size-4 has-text-weight-bold">
-                                                        finpub {{fp_post_code}}
+                                                    <p class="bank_transfer__value is-size-4 has-text-weight-bold is-uppercase">
+                                                        FP {{fp_post_code}}
                                                     </p>
                                                 </div>
                                             </div>
