--- a/partials/widgets/widget-links.hbs
+++ b/partials/widgets/widget-links.hbs
@@ -1,5 +1,5 @@
 <aside class="widget widget-links">
-	<h4 class="widget-title">Useful Links</h4>
+	<h4 class="widget-title">LINK HAY</h4>
 	<ul>
 		{{! Here are some examples below. You can add any link you want. }}
 		<li><a href="/ban-muon-viet-bai/">Bạn muốn viết bài?</a></li>
