--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -7,10 +7,17 @@
 			<span class="bar"></span>
 		</div>
 		<ul class="social-links" style="display:none"></ul>
+		<nav id="logo-navigation">
+			<a href="/">
+				<img src="https://tiblogen.sirv.com/Images/logo_tiny.png" width="100" height="107" alt="">
+			</a>
+		</nav>
 		<nav id="main-navigation">
 			<ul class="nav-list clearfix">
 				{{#foreach navigation}}
-          <li class="menu-item nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
+          <li class="menu-item nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}
+			<span class="has-text-grey-light has-text-weight-light">|</span>
+		  </a></li>
         {{/foreach}}
 				<li class="menu-item mobile-authentication">
 					<a id="loginMobileBtn" href='' ></a>
