--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,4 +1,10 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+/* ---------------------------------------------------------- */
+
+@import "global.css";
+@import "custom.css";
+
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -2582,3 +2588,5 @@ button[type="submit"]:hover {
     transform: rotate(360deg);
   }
 }
+
+
