--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -10,20 +10,30 @@
 		<nav id="main-navigation">
 			<ul class="nav-list clearfix">
 				{{#foreach navigation}}
-          <li class="menu-item nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
-        {{/foreach}}
-				<li class="menu-item mobile-authentication">
-					<a id="loginMobileBtn" href='' ></a>
-					<div id="user-info-mobile" class="user-info"> </div>
-				</li>
+          			<li class="menu-item nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation">
+          				<a href="{{url absolute="true"}}">{{label}}</a>
+          			</li>
+        		{{/foreach}}        			
+					<li class="menu-item mobile-authentication">
+						{{#if @member}}						
+							<a id="loginMobileBtn" href='' >Đăng Xuất</a>
+							<div id="user-info-mobile" class="user-info"> </div>
+						{{else}}
+							<a id="loginMobileBtn" class="subscribe-button" href="#subscribe">Đăng Ký</a>
+						{{/if}}
+					</li>
 			</ul>
 		</nav>
 		<nav id="authentication">
 			<ul class="nav-list clearfix">
 				<li class="menu-item">
-					<a id="loginBtn" href='' ></a>
-					<div id="user-info" class="user-info">
-					</div>
+					{{#if @member}}	
+						<a id="loginBtn" >Đăng Xuất</a>
+						<div id="user-info" class="user-info">
+						</div>
+					{{else}}
+						<a id="loginBtn" class="subscribe-button" href="#subscribe">Đăng Ký</a>
+					{{/if}}
 				</li>
 			</ul>
 		</nav>
