--- a/default.hbs
+++ b/default.hbs
@@ -81,10 +81,14 @@
 	{{ghost_head}}
 
 	{{#is "post"}}
-	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>  
-	  	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-	  	<link rel="stylesheet" href="{{asset "css/font-awesome.min.css"}}">
+		{{#post}}
+			{{#if fee}}
+			  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+			  	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>  
+			  	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+			  	<link rel="stylesheet" href="{{asset "css/font-awesome.min.css"}}">
+		  	{{/if}}
+	  	{{/post}}
   	{{/is}}
 </head>
 <body class="{{body_class}}">
