--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -348,3 +348,29 @@
 }
 
 
+/* ****************************************** */
+.post-list .author-name {
+    color: #333;
+}
+.post-list .author-name:after {
+    color: #bfbfbf;
+}
+.fp-cat-links > .fa-tags {
+    color: #bfbfbf;
+    font-size: 12px;
+    margin-right: 5px;
+}
+.fp-cat-links > a {
+    font-family: "Ubuntu", sans-serif;
+    font-size: 12px;
+    color: #bfbfbf;
+    display: inline-block;
+    margin-right: 10px;
+}
+.fp-cat-links > a:not(:last-child):after {
+    content: "|";
+    padding-left: 10px;
+}
+.fp-cat-links > a:hover {
+    color: #333;
+}
