--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,4 +12,5 @@
     --pink: #fa3a57;
     --brown: #a3821a;
     --darkmode: color(var(--darkgrey) l(+2%));
+    --lighttext:rgb(112, 108, 100);
 }
