--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1649,6 +1649,7 @@ button[type="submit"]:hover {
   float: left;
   width: 35px;
   height: 35px;
+  object-fit: cover;
   border-radius: 50%;
 }
 .post .entry-meta .right {
@@ -2561,6 +2562,8 @@ button[type="submit"]:hover {
     float: left;
     margin-bottom: 0;
     width: 230px;
+    height: 170px;
+    object-fit: cover;
   }
   .post-list:not(.featured) .entry-content,
   .post-list:not(.featured) .entry-footer {
