--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -33,7 +33,8 @@
 		<p>{{excerpt words="26"}}...</p>
 	</div>
 	<div class="entry-footer">
-		<span class="cat-links">
+		<span class="fp-cat-links">
+			<i class="fa fa-tags"></i>
 			{{tags separator=""}}
 		</span>
 	</div>
