--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,4 +13,5 @@
     --brown: #a3821a;
     --darkmode: color(var(--darkgrey) l(+2%));
     --lighttext:rgb(112, 108, 100);
+    --darktext:#241e12;
 }
