--- a/default.hbs
+++ b/default.hbs
@@ -85,8 +85,8 @@
 	{{#is "post"}}
 		{{#post}}
 			{{#if fee}}
-			  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-			  	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>  			  				  
+			<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">-->
+			  	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>   			  				  
 		  	{{/if}}
 	  	{{/post}}
   	{{/is}}
